organized scss files and folders structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-
-<h1>Welcome to my Portfolio</h1>
+<div class="container">
+  <div class="header">
+    <h1>My Portfolio</h1>
+  </div>
+  <div class="content">
+    <p>Explore my projects and skills.</p>
+  </div>
+  <div class="footer">
+    <p>&copy; 2023 My Portfolio</p>
+  </div>
+</div>
 
 <router-outlet />
