--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header">
-    <h1>Testing CI/CD </h1>
+    <h1>Removed CI/CD Config</h1>
   </div>
   <div class="content">
     <p>Explore my projects and skills.</p>
