configure grid-layout module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <div class="footer">
     <p>&copy; 2023 My Portfolio</p>
   </div>
+  <app-grid-layout></app-grid-layout>
 </div>
 
 <router-outlet />
