created all components required for the gridlayout

--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -1,3 +1,8 @@
-<p>grid-layout works!</p>
-
-<app-site-identity></app-site-identity>
+<main id="site-grid" class="container">
+  <h1>Grid Layout</h1>
+  <app-site-identity></app-site-identity>
+    <app-navbar></app-navbar>
+  <app-carousel></app-carousel>
+  <app-page-introduction></app-page-introduction>
+  <app-footer></app-footer>
+</main>
