structured the grid layout

--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -1,8 +1,36 @@
-<main id="site-grid" class="container">
-  <h1>Grid Layout</h1>
-  <app-site-identity></app-site-identity>
+
+<!-- container grid-area -->
+<div id="site-grid-container" class="site-grid-container">
+
+<!-- header grid-area -->
+<header id="grid-area-header" class="grid-area-header">
+    <app-site-identity></app-site-identity>
+</header>
+
+<!-- carousel grid-area -->
+<div id="grid-area-carousel" class="grid-area-carousel">
+    <app-carousel></app-carousel>
+</div>
+
+<!-- navigation grid-area -->
+<nav id="grid-area-navbar" class="grid-area-navbar">
     <app-navbar></app-navbar>
-  <app-carousel></app-carousel>
-  <app-page-introduction></app-page-introduction>
-  <app-footer></app-footer>
+</nav>
+
+<!-- page-intro grid-area -->
+<div id="grid-area-page-intro" class="grid-area-page-intro">
+    <app-page-introduction></app-page-introduction>
+</div>
+
+<!-- main content grid-area -->
+<main id="grid-area-main" class="grid-area-main">
+    There's a single main landmark element. The main element identifies the main content of the document. 
+    There should be only one main per page.
 </main>
+
+<!-- footer grid-area -->
+<footer id="grid-area-footer" class="grid-area-footer">
+    <app-footer></app-footer>
+</footer>
+
+</div>
