--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -23,8 +23,8 @@
 </div>
 
 <!-- main content grid-area -->
-<main id="grid-area-main" class="grid-area-main">
-    There's a single main landmark element. The main element identifies the main content of the document. 
+<main id="grid-area-main-content" class="grid-area-main-content">
+    The main element identifies the main content of the document. 
     There should be only one main per page.
 </main>
 
