add layout header

--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -1,6 +1,6 @@
 
 <!-- container grid-area -->
-<div id="site-grid-container" class="site-grid-container">
+<section id="site-grid-container" class="site-grid-container">
 
 <!-- header grid-area -->
 <header id="grid-area-header" class="grid-area-header">
@@ -8,9 +8,9 @@
 </header>
 
 <!-- carousel grid-area -->
-<div id="grid-area-carousel" class="grid-area-carousel">
+<section id="grid-area-carousel" class="grid-area-carousel">
     <app-carousel></app-carousel>
-</div>
+</section>
 
 <!-- navigation grid-area -->
 <nav id="grid-area-navbar" class="grid-area-navbar">
@@ -18,9 +18,9 @@
 </nav>
 
 <!-- page-intro grid-area -->
-<div id="grid-area-page-intro" class="grid-area-page-intro">
+<section id="grid-area-page-intro" class="grid-area-page-intro">
     <app-page-introduction></app-page-introduction>
-</div>
+</section>
 
 <!-- main content grid-area -->
 <main id="grid-area-main-content" class="grid-area-main-content">
@@ -33,4 +33,4 @@
     <app-footer></app-footer>
 </footer>
 
-</div>
+</section>
