--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 @use 'abstracts/variables' as *;
 @use "sass:map";
 
-//Handle media queries with breakpoints
+//Reusable media queries the handles various breakpoints
 @mixin respond-to($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
     @media (max-width: map.get($breakpoints, $breakpoint)) {
