--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,9 +3,12 @@
 //Font and color variables
 $standard-font-color: #1b263b;
 $font-stack: 'Helvetica Neue', Arial, sans-serif;
+
+//Spacing variables
 $spacing-sm: 8px;
 $spacing-md: 16px;
-$spacing-lg: 32px;
+$spacing-lg: 24px;
+$spacing-xl: 32px;
 
 //Background colors
 $primary-bg-color: #ffffff;
