--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -1,1 +1,13 @@
-<p>site-identity works!</p>
+<div id="site-identity" class="site-identity">
+  <div class="site-names">
+    <div class="site-logo">
+      <img src="./img/site-logo/logo.png" alt="Site Logo" />
+    </div>
+    <div class="site-title-and-description">
+      <h1 class="site-title">Portfolio</h1>
+      <p class="site-description">Angular Front-End Developer</p>
+    </div>
+  </div>
+
+  <div class="site-contact-details">contact details here</div>
+</div>
