added media query for RWD

--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -3,11 +3,47 @@
     <div class="site-logo">
       <img src="./img/site-logo/logo.png" alt="Site Logo" />
     </div>
+
     <div class="site-title-and-description">
-      <h1 class="site-title">Portfolio</h1>
-      <p class="site-description">Angular Front-End Developer</p>
+      <div class="site-title">
+        <div class="title-name"><h1>PORTFOLIO</h1></div>
+        <div class="site-theme"><i class="bi bi-circle-half"></i></div>
+      </div>
+
+      <p class="site-description">Showcasing Skills</p>
+      
     </div>
   </div>
 
-  <div class="site-contact-details">contact details here</div>
+  <div class="site-contact-details">
+    
+    <div class="contact-details">
+
+      <div class="site-contact-text contact-number">
+        <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
+        <span class="contact-number-text">(+27)79 691 0468 </span>
+      </div>
+
+      <div class="site-contact-text email-address">
+        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
+        <span class="email-address-text"
+          ><a href="mailto:yingishirinda@gmail.com"
+            >yingishirinda&#64;gmail.com</a
+          >
+        </span>
+      </div>
+
+      <div class="site-contact-text theme-button">
+        <div class="site-theme contact-icon"><i class="bi bi-circle-half"></i></div>
+      </div>
+
+    </div>
+
+    <div class="current-weather">
+      <div class="weather-icon"><i class="bi bi-cloud-sun-fill"></i></div>
+      <div class="weather-text">22°C</div>
+    </div>
+
+  </div>
+
 </div>
