--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,7 +5,7 @@ body {
     font-family: $font-stack;
     font-size: 16px;
     line-height: 1.5;
-    color: $standard-font-color;
+    color: $light-default-font-color;
 }
 
 h1,
