created footer grid layout

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,1 +1,116 @@
-<p>footer works!</p>
+<div id="footer" class="footer">
+  <div class="footer-top-section">
+
+    <div class="footer-item item-introduction">
+      <h4>
+        <i class="bi bi-info-circle-fill"></i>
+        introduction
+      </h4>
+      <p>
+        Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In this
+        portfolio you will find a collection of my work, skills, and projects
+        that showcase my abilities as a Angular Front-End Developer.
+      </p>
+    </div>
+
+    <div class="footer-item item-technology">
+      <h4>
+        <i class="bi bi-code-slash"></i>
+        technology stack
+      </h4>
+      <div class="items-wrapper">
+        <div class="tech-item">
+          <img src="./img/tech-logos/html.png" alt="HTML5 Logo" />
+          <span>HTML5</span>
+        </div>
+        <div class="tech-item">
+          <img src="./img/tech-logos/css.png" alt="CSS3 Logo" />
+          <span>CSS3</span>
+        </div>
+        <div class="tech-item">
+          <img src="./img/tech-logos/scss.png" alt="SCSS Logo" />
+          <span>SCSS</span>
+        </div>
+
+        <div class="tech-item">
+          <img src="./img/tech-logos/bootstrap.png" alt="Bootstrap Logo" />
+          <span>Bootstrap</span>
+        </div>
+
+        <div class="tech-item">
+          <img src="./img/tech-logos/ndjs.png" alt="CSS3 Logo" />
+          <span>NodeJs</span>
+        </div>
+
+        <div class="tech-item">
+          <img src="./img/tech-logos/angular.svg" alt="Angular Logo" />
+          <span>Angular</span>
+        </div>
+        <div class="tech-item">
+          <img src="./img/tech-logos/JavaScript.png" alt="HTML5 Logo" />
+          <span>JavaScript</span>
+        </div>
+        <div class="tech-item">
+          <img src="./img/tech-logos/rxjs.svg" alt="GitHub Logo" />
+          <span>RxJs</span>
+        </div>
+
+        <div class="tech-item">
+          <img src="./img/tech-logos/postman.png" alt="HTML5 Logo" />
+          <span>Postman</span>
+        </div>
+        <div class="tech-item">
+          <img src="./img/tech-logos/github.png" alt="GitHub Logo" />
+          <span>Git</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-item item-resources">
+      <h4>
+        <i class="bi bi-stack-overflow"></i>
+        other resources
+      </h4>
+      <ul class="resources-list">
+        <li><a href="https://sass-lang.com/">SCSS - Documentation</a></li>
+        <li><a href="https://www.typescriptlang.org/">TypeScript - Documentation</a></li>
+        <li><a href="https://angular.io/">Angular - Documentation</a></li>
+        <li><a href="https://javascript.info/">JavaScript - Documentation </a></li>
+        <li><a href="https://https://github.com/">GitHub - Documentation </a></li>
+      </ul>
+    </div>
+
+    <div class="footer-item item-contact-details">
+      <h4>
+        <i class="bi bi-person-lines-fill"></i>
+        contact details
+      </h4>
+      <div class="contact-item">
+        <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
+        <span class="contact-text">(+27)79 691 0468</span>
+      </div>
+      <div class="contact-item">
+        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
+        <span class="contact-text">email-address</span>
+      </div>
+
+      <h4>
+        <i class="bi bi-share-fill"></i>
+        social pages
+      </h4>
+      <div class="contact-item">
+        <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
+        <span class="contact-text">(+27)79 691 0468</span>
+      </div>
+      <div class="contact-item">
+        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
+        <span class="contact-text">email-address</span>
+      </div>
+    </div>
+    
+  </div>
+
+  <div class="footer-bottom-section">
+    <p>&copy; 2025 Portfolio. All rights reserved.</p>
+  </div>
+</div>
