completed footer grid layout design

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,6 +1,5 @@
 <div id="footer" class="footer">
   <div class="footer-top-section">
-
     <div class="footer-item item-introduction">
       <h4>
         <i class="bi bi-info-circle-fill"></i>
@@ -16,60 +15,23 @@
     <div class="footer-item item-technology">
       <h4>
         <i class="bi bi-code-slash"></i>
-        technology stack
+        tech stack
       </h4>
       <div class="items-wrapper">
-        <div class="tech-item">
-          <img src="./img/tech-logos/html.png" alt="HTML5 Logo" />
-          <span>HTML5</span>
-        </div>
-        <div class="tech-item">
-          <img src="./img/tech-logos/css.png" alt="CSS3 Logo" />
-          <span>CSS3</span>
-        </div>
-        <div class="tech-item">
-          <img src="./img/tech-logos/scss.png" alt="SCSS Logo" />
-          <span>SCSS</span>
-        </div>
-
-        <div class="tech-item">
-          <img src="./img/tech-logos/bootstrap.png" alt="Bootstrap Logo" />
-          <span>Bootstrap</span>
-        </div>
-
-        <div class="tech-item">
-          <img src="./img/tech-logos/ndjs.png" alt="CSS3 Logo" />
-          <span>NodeJs</span>
-        </div>
-
-        <div class="tech-item">
-          <img src="./img/tech-logos/angular.svg" alt="Angular Logo" />
-          <span>Angular</span>
-        </div>
-        <div class="tech-item">
-          <img src="./img/tech-logos/JavaScript.png" alt="HTML5 Logo" />
-          <span>JavaScript</span>
-        </div>
-        <div class="tech-item">
-          <img src="./img/tech-logos/rxjs.svg" alt="GitHub Logo" />
-          <span>RxJs</span>
-        </div>
-
-        <div class="tech-item">
-          <img src="./img/tech-logos/postman.png" alt="HTML5 Logo" />
-          <span>Postman</span>
-        </div>
-        <div class="tech-item">
-          <img src="./img/tech-logos/github.png" alt="GitHub Logo" />
-          <span>Git</span>
-        </div>
+        <ul class="tech-list">
+          <li>Responsive UI Design</li>
+          <li>Angular/TypeScript</li>
+          <li>RESTful API Integration</li>
+          <li>Unit Testing</li>
+          <li>Git Source Control</li>
+        </ul>
       </div>
     </div>
 
     <div class="footer-item item-resources">
       <h4>
         <i class="bi bi-stack-overflow"></i>
-        other resources
+        resources
       </h4>
       <ul class="resources-list">
         <li><a href="https://sass-lang.com/">SCSS - Documentation</a></li>
@@ -85,29 +47,33 @@
         <i class="bi bi-person-lines-fill"></i>
         contact details
       </h4>
-      <div class="contact-item">
-        <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
-        <span class="contact-text">(+27)79 691 0468</span>
-      </div>
-      <div class="contact-item">
-        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
-        <span class="contact-text">email-address</span>
-      </div>
 
-      <h4>
-        <i class="bi bi-share-fill"></i>
-        social pages
-      </h4>
-      <div class="contact-item">
-        <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
-        <span class="contact-text">(+27)79 691 0468</span>
-      </div>
-      <div class="contact-item">
-        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
-        <span class="contact-text">email-address</span>
+      <div class="contact-items">
+        <div class="contact-item first-item">
+          <i class="bi bi-telephone-fill"> direct contact</i>
+          <div class="item">
+            <div class="contact-number">(+27)79 691 0468</div>
+            <div class="contact-email">
+              <a href="mailto:yingishirinda@gmail.com"
+                >yingishirinda&#64;gmail.com</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-item">
+          <i class="bi bi-share-fill"> social pages</i>
+          <div class="item">
+            <div class="contact-pages">
+              <i class="bi bi-linkedin"></i>
+              <i class="bi bi-github"></i>
+              <i class="bi bi-whatsapp"></i>
+              <i class="bi bi-facebook"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    
   </div>
 
   <div class="footer-bottom-section">
