--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -75,9 +75,10 @@ $light-border-color: #e9ecef;
 // Breakpoints for responsive design
 $breakpoints: (
   "xs": 480px,
-  "pro-xm": 548px,
+  "pro-xs": 548px,
   "pre-sm": 700px,
   "sm": 768px,
+  "pro-sm": 920px,
   "md": 992px,
   "lg": 1200px,
   "xl": 1440px
