--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -69,7 +69,6 @@
 
             .contact-items {
                 .contact-item {
-                    margin-bottom: $spacing-md;
 
                     .bi {
                         text-transform: uppercase;
@@ -97,12 +96,17 @@
                             display: flex;
                             flex-direction: row;
                             gap: $spacing-md;
+
                             i {
                                 font-size: $font-size-lg;
                             }
-                            
+
                         }
                     }
+                }
+
+                .first-item {
+                    margin-bottom: $spacing-md;
                 }
             }
 
