reduced the margin bottom of the contact item in the footer

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -70,19 +70,10 @@
             .contact-items {
                 .contact-item {
 
-                    .bi {
-                        text-transform: uppercase;
-                        font-style: normal;
-                        margin-bottom: $spacing-md;
-                        font-size: $font-size-md;
-                        color: $comp-default-font-color
-                    }
-
                     .item {
                         margin-top: $spacing-sm;
-                        margin-left: $spacing-md;
-
-
+                        padding-left: $spacing-md;
+                        border-left: 1px solid $light-primary-font-color;
                         a {
                             color: $light-primary-font-color;
                             text-decoration: none;
@@ -95,12 +86,12 @@
                         .contact-pages {
                             display: flex;
                             flex-direction: row;
-                            gap: $spacing-md;
+                            column-gap: $spacing-md;
 
                             i {
                                 font-size: $font-size-lg;
+                                color: $comp-default-font-color
                             }
-
                         }
                     }
                 }
