--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -50,7 +50,8 @@
 
       <div class="contact-items">
         <div class="contact-item first-item">
-          <i class="bi bi-telephone-fill"> direct contact</i>
+          <!-- <i class="bi bi-telephone-fill"> direct contact</i> -->
+           <h5>contacts</h5>
           <div class="item">
             <div class="contact-number">(+27)79 691 0468</div>
             <div class="contact-email">
@@ -62,7 +63,7 @@
         </div>
 
         <div class="contact-item">
-          <i class="bi bi-share-fill"> social pages</i>
+          <h5>social pages</h5>
           <div class="item">
             <div class="contact-pages">
               <i class="bi bi-linkedin"></i>
