--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,4 @@
-@use 'abstracts/variables' as *;
+@use 'abstracts' as *;
 
 // base/_typography.scss
 body {
@@ -10,6 +10,8 @@ body {
 
 h1,
 h2,
-h3 {
-    font-weight: bold;
+h3,
+h4
+h5 {
+    text-transform: uppercase;
 }
