--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -34,11 +34,11 @@
         resources
       </h4>
       <ul class="resources-list">
-        <li><a href="https://sass-lang.com/">SCSS - Documentation</a></li>
-        <li><a href="https://www.typescriptlang.org/">TypeScript - Documentation</a></li>
-        <li><a href="https://angular.io/">Angular - Documentation</a></li>
-        <li><a href="https://javascript.info/">JavaScript - Documentation </a></li>
-        <li><a href="https://https://github.com/">GitHub - Documentation </a></li>
+        <li><a href="https://sass-lang.com/">Learning - SCSS</a></li>
+        <li><a href="https://www.typescriptlang.org/">Learning -  TypeScript</a></li>
+        <li><a href="https://angular.io/">Learning - Angular</a></li>
+        <li><a href="https://javascript.info/">Learning -  JavaScript </a></li>
+        <li><a href="https://https://github.com/">Learning - GitHub </a></li>
       </ul>
     </div>
 
