added current year

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -78,6 +78,6 @@
   </div>
 
   <div class="footer-bottom-section">
-    <p>&copy; 2025 Portfolio. All rights reserved.</p>
+    <p>&copy; {{year}} Portfolio. All rights reserved.</p>
   </div>
 </div>
