added developer image in the introduction item

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -6,22 +6,31 @@
         introduction
       </h4>
       <p>
-        Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In this
-        portfolio you will find a collection of my work, skills, and projects
-        that showcase my abilities as a Angular Front-End Developer.
+        <img
+          class="introduction-img"
+          src="./img/developer/yingi.png"
+          alt="Site Logo"
+        />
+        <span class="introduction-text"
+          >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
+          this portfolio you will find a collection of my work and
+          projects that showcase my skills as a Front-End
+          Developer.</span
+        >
       </p>
     </div>
 
     <div class="footer-item item-technology">
       <h4>
         <i class="bi bi-code-slash"></i>
-        tech stack
+        technology stack
       </h4>
       <div class="items-wrapper">
         <ul class="tech-list">
-          <li>Responsive UI Design</li>
+          <li>Responsive UI Designs</li>
+          <li>Node.Js and NPM</li>
           <li>Angular/TypeScript</li>
-          <li>RESTful API Integration</li>
+          <li>RESTful API Integrations</li>
           <li>Unit Testing</li>
           <li>Git Source Control</li>
         </ul>
@@ -35,9 +44,11 @@
       </h4>
       <ul class="resources-list">
         <li><a href="https://sass-lang.com/">Learning - SCSS</a></li>
-        <li><a href="https://www.typescriptlang.org/">Learning -  TypeScript</a></li>
+        <li>
+          <a href="https://www.typescriptlang.org/">Learning - TypeScript</a>
+        </li>
         <li><a href="https://angular.io/">Learning - Angular</a></li>
-        <li><a href="https://javascript.info/">Learning -  JavaScript </a></li>
+        <li><a href="https://javascript.info/">Learning - JavaScript </a></li>
         <li><a href="https://https://github.com/">Learning - GitHub </a></li>
       </ul>
     </div>
@@ -51,7 +62,7 @@
       <div class="contact-items">
         <div class="contact-item first-item">
           <!-- <i class="bi bi-telephone-fill"> direct contact</i> -->
-           <h5>contacts</h5>
+          <h5>contacts</h5>
           <div class="item">
             <div class="contact-number">(+27)79 691 0468</div>
             <div class="contact-email">
@@ -78,6 +89,9 @@
   </div>
 
   <div class="footer-bottom-section">
-    <p>&copy; {{year}} Portfolio. All rights reserved. Developed by <strong>Yingisani</strong></p>
+    <p>
+      &copy; {{ year }} Portfolio. All rights reserved. Developed by
+      <strong>Yingisani</strong>
+    </p>
   </div>
 </div>
