--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -24,8 +24,8 @@
 
 <!-- main content grid-area -->
 <main id="grid-area-main-content" class="grid-area-main-content">
-    The main element identifies the main content of the document. 
-    There should be only one main per page.
+    <h1>Under Construction</h1>
+     <h3>Please note that this portfolio is still under construction</h3>
 </main>
 
 <!-- footer grid-area -->
