--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -5,10 +5,8 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     justify-content: space-between;
-    padding: 0;
-    margin: 10px 0;
+    padding: 10px 0;
     text-align: left;
-
     .site-names {
 
         display: flex;
